Bug 237228 pref "layout.word_select.eat_space_to_next_word" can't be set by user in the profile's prefs.js r=dbaron, sr=roc, patch=ginn.chen@sun.com